criação de testes KeeperInterfaceTest e bugfix ao deletar diretorio pra test